# clean_unused_files

./: .gitignore  Cargo.toml  flake.nix  module.nix  shell.nix
scripts/: build_cross.sh  build_musl.sh  upload_and_run.sh
src/: config.rs  email_handler.rs  file_manager.rs  main.rs  qbit_manager.rs
