[package]
name = "clean_unused_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = { version = "0.9", features = ['vendored'] } # required for cross-compilation
tokio = { version = "1.34.0", features = ["full"]}
qbit-rs = "0.4.1"
lettre = "0.11"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
configparser = "3.1.0"
clap = { version = "4.5.16", features = ["derive"] }
